--- a/FTOpcDaService.exe.config
+++ b/FTOpcDaService.exe.config
@@ -3,4 +3,7 @@
     <startup> 
         
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
+  <appSettings>
+    <add key="OpcUri" value="opcda://ltxwdatprd01:4840/RSOPC Gateway"/>
+  </appSettings>
 </configuration>
